<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F8F8F8"
    android:gravity="center"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginStart="11dp"
        android:layout_marginEnd="11dp"
        android:paddingBottom="20dp"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#3E95C2"

            >

            <TextView
                android:id="@+id/select_date"
                android:layout_width="141dp"
                android:layout_height="17dp"
                android:text="@string/select_date"
                android:fontFamily="@font/opensans_semibold"
                android:textAppearance="@style/select_date"
                android:gravity="bottom"
                android:layout_marginStart="20dp"
                android:layout_gravity="center"
                />
        </LinearLayout>
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/time_durati"
            android:layout_width="141dp"
            android:layout_height="17dp"
            android:text="@string/time_duration"
            android:fontFamily="@font/opensans_semibold"
            android:layout_marginStart="19dp"
            android:textAppearance="@style/time_durati"
            android:gravity="bottom"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/from_"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:text="@string/from"
                android:layout_marginTop="23.5dp"
                android:layout_marginStart="13dp"
                android:fontFamily="@font/opensans_semibold"
                android:textAppearance="@style/from_"
                android:gravity="bottom"
                />
            <TextView
                android:id="@+id/timeFrom"
                android:layout_toEndOf="@+id/from_"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:hint="@string/_01_00_pm"
                android:gravity="center"
                android:fontFamily="@font/opensans_semibold"
                android:layout_marginTop="23.5dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/from_"
                android:background="@drawable/time_picker"

                />


            <TextView
                android:id="@+id/to_"
                android:layout_width="wrap_content"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:text="@string/to"
                android:layout_marginTop="23.5dp"
                android:layout_toStartOf="@+id/timeTo"
                android:fontFamily="@font/opensans_semibold"
                android:textAppearance="@style/from_"
                android:gravity="bottom"
                />
            <TextView
                android:id="@+id/timeTo"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:hint="@string/_01_00_pm"
                android:fontFamily="@font/opensans_semibold"
                android:layout_marginTop="23.5dp"
                android:layout_marginStart="10dp"
                android:textAppearance="@style/from_"
                android:gravity="center"
                android:background="@drawable/time_picker"
                android:layout_marginEnd="32dp"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="57.5dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="9dp"
            >

            <TextView
                android:id="@+id/ok"
                android:layout_width="51dp"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:text="@string/ok"

                android:textAppearance="@style/ok"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/opensans_semibold"

                android:gravity="center_horizontal|bottom"
                />

            <TextView
                android:id="@+id/cancel"
                android:layout_width="67dp"
                android:layout_height="17dp"
                android:layout_centerVertical="true"
                android:text="@string/cancel"
                android:textAppearance="@style/cancel"
                android:layout_alignParentStart="true"
                android:fontFamily="@font/opensans_semibold"
                />


        </RelativeLayout>
    </LinearLayout>

</LinearLayout>